# schedules-runner

./: Cargo.toml  settings.toml
.github/workflows/: build.yml  release.yml
src/: main.rs  settings.rs
